@startuml

title __FRAMEWORKS's Class Diagram__\n

  namespace FourCats {
    namespace Frameworks {
      class FourCats.Frameworks.BalAnalyzerImplementation {
          ~ jsonNode : JsonNode
          + BalAnalyzerImplementation()
          + BalAnalyzerImplementation()
          + BalAnalyzerImplementation()
          + createJsonFromBAL()
          + get()
          + getBAL()
          + getJsonNode()
          + setBalFile()
      }
    }
  }
  

  namespace FourCats {
    namespace Frameworks {
      class FourCats.Frameworks.DataKeeper {
          - mScenarios : Map<Integer, Scenario>
          + DataKeeper()
          + clearScenariosMap()
          + createScenariosMap()
          + getScenarioMap()
          + removeAction()
      }
    }
  }
  

  namespace FourCats {
    namespace Frameworks {
      class FourCats.Frameworks.FileSystemAccess {
          + loadBdl()
          + readFile()
          - readBdlNouns()
          - readBdlPredicates()
          - readBdlVerbs()
      }
    }
  }
  

  namespace FourCats {
    namespace Frameworks {
      class FourCats.Frameworks.Repository {
          + Repository()
          + createScenario()
          + deleteScenarios()
          + deleteSuggestion()
          + read()
          + readScenarios()
      }
    }
  }
  

  namespace FourCats {
    namespace Frameworks {
      class FourCats.Frameworks.StanfordNlp {
          {static} - DP_MODEL : String
          - depparser : DependencyParser
          - pipeline : StanfordCoreNLP
          - props : Properties
          - tokenizerFactory : TokenizerFactory<CoreLabel>
          + StanfordNlp()
          + parseDocumentContent()
      }
    }
  }
  

  FourCats.Frameworks.BalAnalyzerImplementation .up.|> FourCats.InterfaceAccess.BalAnalyzer
  FourCats.Frameworks.FileSystemAccess .up.|> FourCats.InterfaceAccess.PersistentMemoryAccess
  FourCats.Frameworks.Repository .up.|> FourCats.InterfaceAccess.RepositoryAccess
  FourCats.Frameworks.Repository o-- FourCats.Frameworks.DataKeeper : dataKeeper
  FourCats.Frameworks.Repository o-- FourCats.InterfaceAccess.PersistentMemoryAccess : memoryAccess
  FourCats.Frameworks.StanfordNlp .up.|> FourCats.InterfaceAccess.TextAnalyzer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
